better model, backend integration

--- a/cfcai-data-crunching/process.ipynb
+++ b/cfcai-data-crunching/process.ipynb
@@ -87,15 +87,8 @@
     "    if 'coronavirus' in text or 'covid' in text or 'covid-19' in text or 'virus' in text:\n",
     "        texts.append(text)\n",
     "    else:\n",
-    "        to_remove.append(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        to_remove.append(url)\n",
+    "\n",
     "for u in to_remove:\n",
     "    del articles[u]"
    ]
